--- a/heritage-hats/ddn336/5pm/kaitlyn/index.html
+++ b/heritage-hats/ddn336/5pm/kaitlyn/index.html
@@ -93,42 +93,50 @@
                     <div class="swiper storeWhiteBackgroundColor">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <div class="Fedora Felt Hats">
+                                <div class="fedora_felt">
                                     <h3>Felt Fedoras</h3>
-                                    <img src="images/feltfedora1.png">
-                                    <img src="images/feltfedora2.png">
-                                    <img src="images/feltfedora3.png">
-                                    <img src="images/feltfedora4.png">
+                                    <div class="hatSwiper">
+                                        <img src="images/feltfedora1.png">
+                                        <img src="images/feltfedora2.png">
+                                        <img src="images/feltfedora3.png">
+                                        <img src="images/feltfedora4.png">
+                                    </div>
                                 </div>
 
                             </div>
                             <div class="swiper-slide">
-                                <div class="Fedora Straw Hats">
+                                <div class="fedora_straw">
                                     <h3>Straw Fedoras</h3>
-                                    <img src="images/strawfedora1.png">
-                                    <img src="images/strawfedora2.png">
-                                    <img src="images/strawfedora3.png">
-                                    <img src="images/strawfedora4.png">
+                                    <div class="hatSwiper">
+                                        <img src="images/strawfedora1.png">
+                                        <img src="images/strawfedora2.png">
+                                        <img src="images/strawfedora3.png">
+                                        <img src="images/strawfedora4.png">
+                                    </div>
                                 </div>
                             </div>
                             
                             <div class="swiper-slide">
-                                <div class="Australian Outback Hats">
+                                <div class="Australian_outback">
                                     <h3>Australian Outback Hats</h3>
-                                    <img src="images/AustralianOutback1.png">
-                                    <img src="images/AustralianOutback2.png">
-                                    <img src="images/AustralianOutback3.png">
-                                    <img src="images/AustralianOutback4.png">
+                                    <div class="hatSwiper">
+                                        <img src="images/AustralianOutback1.png">
+                                        <img src="images/AustralianOutback2.png">
+                                        <img src="images/AustralianOutback3.png">
+                                        <img src="images/AustralianOutback4.png">
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="swiper-slide">
-                                <div class="Panama Hats">
+                                <div class="panama">
                                     <h3>Panama Hats</h3>
-                                    <img src="images/PanamaHat1.png">
-                                    <img src="images/PanamaHat2.png">
-                                    <img src="images/PanamaHat3.png">
-                                    <img src="images/PanamaHat4.png">
+                                    <div class="hatSwiper">
+                                        <img src="images/PanamaHat1.png">
+                                        <img src="images/PanamaHat2.png">
+                                        <img src="images/PanamaHat3.png">
+                                        <img src="images/PanamaHat4.png">
+                                    </div>
                                 </div>
                             </div>
 
