--- a/heritage-hats/ddn336/9am/angelic/index.html
+++ b/heritage-hats/ddn336/9am/angelic/index.html
@@ -19,7 +19,7 @@
         </div>
   <nav>
       <a href="#Heritage Hats Logo" class="logo">
-        <img src="../hh-logo.png" width="100" alt="Heritage Hats">
+        <img src="images/hh_logo.png" width="100" alt="Heritage Hats">
       </a>
 
     <input type="checkbox" id="menu-toggle">
